2014-01-03  Roland Winkler  <winkler@gnu.org>
	Clean up handling of redundant email addresses.
	* lisp/bbdb.el (bbdb-ignore-redundant-mails): Rename from
	bbdb-canonicalize-redundant-mails, keeping the latter as obsolete
	alias.
	(bbdb-add-mails, bbdb-canonicalize-mail-function): Fix docstring.
	* lisp/bbdb-com.el (bbdb-mail-redundant-re): New function
	(bbdb-delete-redundant-mails): Move here from lisp/bbdb-mua.el.
	Merge with command bbdb-delete-duplicate-mails and make the latter
	an obsolete alias.  New optional args query and update.
	* lisp/bbdb-mua.el (bbdb-annotate-message): Use
	bbdb-mail-redundant-re and bbdb-delete-redundant-mails.
	(bbdb-mail-redundant-p): Remove.
	(bbdb-canonical-hosts): Update docstring.

2014-01-03  Roland Winkler  <winkler@gnu.org>
	Check more carefully/frequently that BBDB is editable.
	* lisp/bbdb.el (bbdb-editable): Move here from lisp/bbdb-com.el.
	Revert BBDB buffer if possible.
	* lisp/bbdb.el (bbdb-record-set-field)
	* lisp/bbdb-com.el (bbdb-read-record, bbdb-create-internal)
	(bbdb-merge-records, bbdb-sort-addresses, bbdb-sort-phones)
	(bbdb-sort-xfields)
	* lisp/bbdb-snarf.el (bbdb-snarf): Check that BBDB is editable.
	* lisp/bbdb-mua.el (bbdb-update-records): Obey bbdb-read-only.
	(bbdb-annotate-message): Ignore bbdb-read-only.
	(bbdb-auto-notes): Check that BBDB is editable.

2014-01-03  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-check-name, bbdb-extract-address-components):
	Fix docstring.
	* lisp/bbdb-com.el (bbdb-search-duplicates): Fix warning message.
	Sort records.
	* lisp/bbdb-mua.el (bbdb-auto-notes)
	(bbdb-mua-update-interactive-p): Fix docstring.

2014-01-03  Roland Winkler  <winkler@gnu.org>
	Display records for messages more flexibly.
	* lisp/bbdb-mua.el (bbdb-update-records, bbdb-mua-update-records):
	New optional arg sort.
	(bbdb-mua-display-records): New optional arg all.
	(bbdb-mua-display-all-records): New command.
	(bbdb-mua-display-all-recipients): Renamed from
	bbdb-display-all-recipients.